Production commit (linked lists)

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -83,9 +83,6 @@
     </li>
     <li>
       <a href="./projects/javascript/linked-lists/index.html">linked-lists</a>
-    </li>
-    <li>
-      <a href="./projects/javascript/hashmap/hashmap.js">hashmap</a>
     </li>
   </ul>
 </html>
