Hashmap production fix

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <a href="./projects/javascript/linked-lists/index.html">linked-lists</a>
     </li>
     <li>
-      <a href="./projects/javascript/hashmap/hashmap.js">hashmap</a>
+      <a href="./projects/javascript/hashmap/index.html">hashmap</a>
     </li>
   </ul>
 </html>
