binary search practice production

--- a/practice/practice.html
+++ b/practice/practice.html
@@ -22,6 +22,7 @@
       <li>
         <a href="giphy-api/src/index.html">giphy-api</a>
       </li>
+      <li><a href="./cs/binarySearch.js">binary-search (File)</a></li>
     </ul>
   </body>
 </html>
