binary search tree project setup

--- a/index.html
+++ b/index.html
@@ -87,5 +87,10 @@
     <li>
       <a href="./projects/javascript/hashmap/index.html">hashmap</a>
     </li>
+    <li>
+      <a href="./projects/javascript/binary-search-tree/index.html"
+        >binary-search-tree</a
+      >
+    </li>
   </ul>
 </html>
