Setup knights travails

--- a/index.html
+++ b/index.html
@@ -92,5 +92,8 @@
         >binary-search-tree</a
       >
     </li>
+    <li>
+      <a href="./projects/javascript/knights-travails/index.html"></a>
+    </li>
   </ul>
 </html>
