Added knights travails to index.html

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
       >
     </li>
     <li>
-      <a href="./projects/javascript/knights-travails/index.html"></a>
+      <a href="./projects/javascript/knights-travails/index.html"
+        >knights-travails</a
+      >
     </li>
   </ul>
 </html>
