Changed html files to add new project

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -95,6 +95,11 @@
     <li>
       <a href="./projects/javascript/knights-travails/index.html"
         >knights-travails</a
+      >
+    </li>
+    <li>
+      <a href="./projects/javascript/testing-practice/index.html"
+        >testing-practice</a
       >
     </li>
   </ul>
