--- a/projects/javascript/testing-practice/index.html
+++ b/projects/javascript/testing-practice/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Knights Travails</title>
-    <script src="knightsTravails.js"></script>
+    <title>Testing Practice</title>
   </head>
   <body>
-    <h1>Please open the dev tools</h1>
-    <h1>And view the source code, and the console output.</h1>
+    <h1>Please view the dev tools and the source tab for the code</h1>
+    <h1>Make sure to not view the minified source code</h1>
     <a href="../../../index.html">Back</a>
   </body>
 </html>
