battleship: built working ship class
added: gameboard class with coordinates and attack coordinates

completed most logic (added player.js) TODO: frontend

TODO: finish index.js and the project

Added game start and styled battleship

--- a/index.html
+++ b/index.html
@@ -102,5 +102,8 @@
         >testing-practice</a
       >
     </li>
+    <li>
+      <a href="./projects/javascript/battleship/index.html"></a>
+    </li>
   </ul>
 </html>
