change size to 10 and add battleship to main html

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       >
     </li>
     <li>
-      <a href="./projects/javascript/battleship/index.html"></a>
+      <a href="./projects/javascript/battleship/index.html">battleship</a>
     </li>
   </ul>
 </html>
