Finished Advanced HTML & CSS animation exercises

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -104,6 +104,21 @@
     </li>
     <li>
       <a href="./projects/javascript/battleship/index.html">battleship</a>
+    </li>
+  </ul>
+
+  <h2>Advanced HTML & CSS</h2>
+  <ul>
+    <li>
+      <a href="./projects/advanced-html-css/button-hover/index.html"
+        >button-hover</a
+      >
+    </li>
+    <li>
+      <a href="./projects/advanced-html-css/popup/index.html">popup</a>
+    </li>
+    <li>
+      <a href="./projects/advanced-html-css/dropdown/index.html">dropdown</a>
     </li>
   </ul>
 </html>
