Setup homepage boilerplate

--- a/index.html
+++ b/index.html
@@ -120,5 +120,8 @@
     <li>
       <a href="./projects/advanced-html-css/dropdown/index.html">dropdown</a>
     </li>
+    <li>
+      <a href="./projects/advanced-html-css/homepage/index.html">homepage</a>
+    </li>
   </ul>
 </html>
