--- a/index.html
+++ b/index.html
@@ -124,4 +124,10 @@
       <a href="./projects/advanced-html-css/homepage/index.html">homepage</a>
     </li>
   </ul>
+  <h2>React</h2>
+  <ul>
+    <li>
+      <a href="./practice/react/react-practice.html">react-practice</a>
+    </li>
+  </ul>
 </html>
