Forgot to add react practice to index html

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <h2>React</h2>
   <ul>
     <li>
-      <a href="./practice/"></a>
+      <a href="./practice/react/react-practice.html">react-practice</a>
     </li>
   </ul>
 </html>
