--- a/projects/odin-recipes/recipes/unbelievable-chicken.html
+++ b/projects/odin-recipes/recipes/unbelievable-chicken.html
@@ -4,60 +4,71 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Odin Recipes | Unbelievable Chicken</title>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
-    <h1>Unbelievable Chicken</h1>
-    <figure>
-      <img
-        src="https://www.allrecipes.com/thmb/UFKcJ67B2LUwG1XHTo2z3q_MPOM=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/30522unbelievable-chickenlutzflcat4x3-a66f97fdabf443489e7cef519f47f638.jpg"
-        width="300"
-        height="250"
-      />
-      <figcaption>Photo by lutzflcat</figcaption>
-    </figure>
-    <h2>Description</h2>
-    <p>
-      The unusual combination of easy ingredients in this marinade for chicken
-      is fabulous! Everyone who tastes it asks me to share the recipe. You will
-      love it and the many compliments you get — I promise!
-    </p>
-    <h2>Ingredients</h2>
-    <ul>
-      <li>1/4 Cup Cider Vinegar</li>
-      <li>3 tablespoons prepared coarse-ground mustard or to taste</li>
-      <li>3 cloves garlic peeled and minced</li>
-      <li>1 lime, juiced</li>
-      <li>1/2 lemon, juiced</li>
-      <li>1/2 cup brown sugar or to taste</li>
-      <li>1 1/2 teaspoons salt or to taste</li>
-      <li>ground black pepper to taste</li>
-      <li>6 tablespoons olive oil</li>
-      <li>6 skinless, boneless chicken breast halves</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-      <li>
-        Mix cider vinegar, mustard, garlic, lime juice, lemon juice, brown
-        sugar, salt, and pepper together in a large glass or ceramic bowl. Whisk
-        in olive oil. Add chicken and toss evenly to coat. Cover, and marinate
-        in the refrigerator for 8 hours to overnight.
-      </li>
-      <li>Preheat an outdoor grill for high heat.</li>
-      <li>
-        Lightly oil the grill grate. Place chicken on the preheated grill, and
-        cook 6 to 8 minutes per side, until juices run clear. Discard any
-        remaining marinade.
-      </li>
-    </ol>
-    <a href="../index.html">Home</a>
-    <p>
-      Credits to
-      <a
-        href="https://www.allrecipes.com/recipe/30522/unbelievable-chicken/"
-        target="_blank"
-        rel="noreferrer"
-        >allrecipes.com</a
-      >
-    </p>
+    <header>
+      <h1>Unbelievable Chicken</h1>
+      <figure>
+        <img
+          src="https://www.allrecipes.com/thmb/UFKcJ67B2LUwG1XHTo2z3q_MPOM=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/30522unbelievable-chickenlutzflcat4x3-a66f97fdabf443489e7cef519f47f638.jpg" alt=""
+        />
+        <figcaption>Photo by lutzflcat</figcaption>
+      </figure>
+    </header>
+    <main>
+      <section>
+        <h2>Description</h2>
+        <p>
+          The unusual combination of easy ingredients in this marinade for
+          chicken is fabulous! Everyone who tastes it asks me to share the
+          recipe. You will love it and the many compliments you get — I promise!
+        </p>
+      </section>
+      <section>
+        <h2>Ingredients</h2>
+        <ul>
+          <li>1/4 Cup Cider Vinegar</li>
+          <li>3 tablespoons prepared coarse-ground mustard or to taste</li>
+          <li>3 cloves garlic peeled and minced</li>
+          <li>1 lime, juiced</li>
+          <li>1/2 lemon, juiced</li>
+          <li>1/2 cup brown sugar or to taste</li>
+          <li>1 1/2 teaspoons salt or to taste</li>
+          <li>ground black pepper to taste</li>
+          <li>6 tablespoons olive oil</li>
+          <li>6 skinless, boneless chicken breast halves</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Steps</h2>
+        <ol>
+          <li>
+            Mix cider vinegar, mustard, garlic, lime juice, lemon juice, brown
+            sugar, salt, and pepper together in a large glass or ceramic bowl.
+            Whisk in olive oil. Add chicken and toss evenly to coat. Cover, and
+            marinate in the refrigerator for 8 hours to overnight.
+          </li>
+          <li>Preheat an outdoor grill for high heat.</li>
+          <li>
+            Lightly oil the grill grate. Place chicken on the preheated grill,
+            and cook 6 to 8 minutes per side, until juices run clear. Discard
+            any remaining marinade.
+          </li>
+        </ol>
+      </section>
+    </main>
+    <footer>
+      <a href="../index.html">Home</a>
+      <p>
+        Credits to
+        <a
+          href="https://www.allrecipes.com/recipe/30522/unbelievable-chicken/"
+          target="_blank"
+          rel="noreferrer"
+          >allrecipes.com</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
