Added cv project

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -128,6 +128,9 @@
   <ul>
     <li>
       <a href="./practice/react/react-practice.html">react-practice</a>
+    </li>
+    <li>
+      <a href="https://cv-application-1st.pages.dev/">cv-app</a>
     </li>
   </ul>
 </html>
