Added memory-card project

--- a/index.html
+++ b/index.html
@@ -132,5 +132,8 @@
     <li>
       <a href="https://cv-application-1st.pages.dev/">cv-app</a>
     </li>
+    <li>
+      <a href="https://memory-card-5lx.pages.dev/">memory-card</a>
+    </li>
   </ul>
 </html>
