added react practices

--- a/practice/react/react-practice.html
+++ b/practice/react/react-practice.html
@@ -9,6 +9,10 @@
     <h2>React Practice</h2>
     <ul>
       <li><a href="./first-react-app/dist/index.html">First React App</a></li>
+      <li>
+        <a href="https://class-components.pages.dev/">Class Components</a>
+      </li>
+      <li><a href="https://react-routers.pages.dev/">React Routers</a></li>
     </ul>
     <a href="../../index.html">Back</a>
   </body>
