Finished basic-informational-site node.js

--- a/index.html
+++ b/index.html
@@ -124,4 +124,11 @@
 	</li>
 </ul>
 
+<h2>Node.js</h2>
+<ul>
+	<li>
+		<a href="https://github.com/sp41414/basic-informational-site">basic-informational-site</a>
+	</li>
+</ul>
+
 </html>
