added mini message board project

--- a/index.html
+++ b/index.html
@@ -151,5 +151,10 @@
     <li>
       <a href="https://github.com/sp41414/ejs-practice">ejs-practice</a>
     </li>
+    <li>
+      <a href="https://estimated-blondell-sp41414-bdb59d04.koyeb.app/"
+        >mini-message-board</a
+      >
+    </li>
   </ul>
 </html>
