Finished Forms and Data Handling

--- a/index.html
+++ b/index.html
@@ -156,5 +156,10 @@
         >mini-message-board</a
       >
     </li>
+    <li>
+      <a href="https://github.com/sp41414/express-forms"
+        >express-validator-practice</a
+      >
+    </li>
   </ul>
 </html>
