Finished inventory app

--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
   <h2>Node.js</h2>
   <ul>
     <li>
+      <a href="./practice/node-practice/index.html">node-practice</a>
+    </li>
+    <li>
       <a href="https://github.com/sp41414/basic-informational-site"
         >basic-informational-site</a
       >
-    </li>
-    <li>
-      <a href="https://github.com/sp41414/ejs-practice">ejs-practice</a>
     </li>
     <li>
       <a href="https://estimated-blondell-sp41414-bdb59d04.koyeb.app/"
@@ -157,9 +157,7 @@
       >
     </li>
     <li>
-      <a href="https://github.com/sp41414/express-forms"
-        >express-validator-practice</a
-      >
+      <a href="https://inventory-app-k5qx.onrender.com/">inventory-app</a>
     </li>
   </ul>
 </html>
