updated mini-message-board link

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       >
     </li>
     <li>
-      <a href="https://estimated-blondell-sp41414-bdb59d04.koyeb.app/"
+      <a href="https://mini-message-board-hue4.onrender.com/">
         >mini-message-board</a
       >
     </li>
