add members only app

--- a/index.html
+++ b/index.html
@@ -153,11 +153,13 @@
     </li>
     <li>
       <a href="https://mini-message-board-hue4.onrender.com/">
-        >mini-message-board</a
-      >
+        mini-message-board</a>
     </li>
     <li>
       <a href="https://inventory-app-k5qx.onrender.com/">inventory-app</a>
+    </li>
+    <li>
+        <a href="https://members-only-ztsx.onrender.com/">members-only</a>
     </li>
   </ul>
 </html>
