add file uploader app

--- a/index.html
+++ b/index.html
@@ -1,165 +1,177 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>The Odin Project... Projects.</title>
-  </head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>The Odin Project... Projects.</title>
+    </head>
 
-  <body>
-    <h1>All The Odin Projects Completed so Far:</h1>
-    <h2>Foundations</h2>
+    <body>
+        <h1>All The Odin Projects Completed so Far:</h1>
+        <h2>Foundations</h2>
+        <ul>
+            <li>
+                <a href="./projects/odin-links-and-images/index.html"
+                    >odin-links-and-images</a
+                >
+            </li>
+            <li>
+                <a href="./projects/odin-recipes/index.html">odin-recipes</a>
+            </li>
+            <li>
+                <a href="./projects/css-intro/index.html">css-intro</a>
+            </li>
+            <li>
+                <a href="./projects/landing-page/index.html">landing-page</a>
+            </li>
+            <li>
+                <a href="projects/js-intro/index.html">js-intro</a>
+            </li>
+            <li>
+                <a href="projects/rock-paper-scissors/index.html"
+                    >rock-paper-scissors</a
+                >
+            </li>
+            <li>
+                <a href="projects/etch-a-sketch/index.html">etch-a-sketch</a>
+            </li>
+            <li>
+                <a href="projects/calculator/index.html">calculator</a>
+            </li>
+        </ul>
+    </body>
+    <h2>Intermediate HTML & CSS</h2>
+
     <ul>
-      <li>
-        <a href="./projects/odin-links-and-images/index.html"
-          >odin-links-and-images</a
-        >
-      </li>
-      <li>
-        <a href="./projects/odin-recipes/index.html">odin-recipes</a>
-      </li>
-      <li>
-        <a href="./projects/css-intro/index.html">css-intro</a>
-      </li>
-      <li>
-        <a href="./projects/landing-page/index.html">landing-page</a>
-      </li>
-      <li>
-        <a href="projects/js-intro/index.html">js-intro</a>
-      </li>
-      <li>
-        <a href="projects/rock-paper-scissors/index.html"
-          >rock-paper-scissors</a
-        >
-      </li>
-      <li>
-        <a href="projects/etch-a-sketch/index.html">etch-a-sketch</a>
-      </li>
-      <li>
-        <a href="projects/calculator/index.html">calculator</a>
-      </li>
+        <li>
+            <a href="projects/sign-up-form/index.html">Sign Up Form</a>
+        </li>
+        <li>
+            <a href="projects/intermediate-html-css/index.html"
+                >intermediate-html-css</a
+            >
+        </li>
+        <li>
+            <a href="projects/admin-dashboard/index.html">admin-dashboard</a>
+        </li>
     </ul>
-  </body>
-  <h2>Intermediate HTML & CSS</h2>
+    <h2>Javascript</h2>
+    <ul>
+        <li>
+            <a href="./practice/practice.html">Practice Section</a>
+        </li>
+        <li>
+            <a href="projects/javascript/library/index.html">library</a>
+        </li>
+        <li>
+            <a href="projects/javascript/tic-tac-toe/index.html">tic-tac-toe</a>
+        </li>
+        <li>
+            <a href="./projects/javascript/restaurant-page/dist/index.html"
+                >restaurant-page</a
+            >
+        </li>
+        <li>
+            <a href="./projects/javascript/todolist/dist/index.html"
+                >todo-list</a
+            >
+        </li>
+        <li>
+            <a href="./projects/javascript/weather-api/dist/index.html"
+                >weather-api</a
+            >
+        </li>
+        <li>
+            <a href="./projects/javascript/recursion/index.html">recursion</a>
+        </li>
+        <li>
+            <a href="./projects/javascript/linked-lists/index.html"
+                >linked-lists</a
+            >
+        </li>
+        <li>
+            <a href="./projects/javascript/hashmap/index.html">hashmap</a>
+        </li>
+        <li>
+            <a href="./projects/javascript/binary-search-tree/index.html"
+                >binary-search-tree</a
+            >
+        </li>
+        <li>
+            <a href="./projects/javascript/knights-travails/index.html"
+                >knights-travails</a
+            >
+        </li>
+        <li>
+            <a href="./projects/javascript/testing-practice/index.html"
+                >testing-practice</a
+            >
+        </li>
+        <li>
+            <a href="./projects/javascript/battleship/index.html">battleship</a>
+        </li>
+    </ul>
 
-  <ul>
-    <li>
-      <a href="projects/sign-up-form/index.html">Sign Up Form</a>
-    </li>
-    <li>
-      <a href="projects/intermediate-html-css/index.html"
-        >intermediate-html-css</a
-      >
-    </li>
-    <li>
-      <a href="projects/admin-dashboard/index.html">admin-dashboard</a>
-    </li>
-  </ul>
-  <h2>Javascript</h2>
-  <ul>
-    <li>
-      <a href="./practice/practice.html">Practice Section</a>
-    </li>
-    <li>
-      <a href="projects/javascript/library/index.html">library</a>
-    </li>
-    <li>
-      <a href="projects/javascript/tic-tac-toe/index.html">tic-tac-toe</a>
-    </li>
-    <li>
-      <a href="./projects/javascript/restaurant-page/dist/index.html"
-        >restaurant-page</a
-      >
-    </li>
-    <li>
-      <a href="./projects/javascript/todolist/dist/index.html">todo-list</a>
-    </li>
-    <li>
-      <a href="./projects/javascript/weather-api/dist/index.html"
-        >weather-api</a
-      >
-    </li>
-    <li>
-      <a href="./projects/javascript/recursion/index.html">recursion</a>
-    </li>
-    <li>
-      <a href="./projects/javascript/linked-lists/index.html">linked-lists</a>
-    </li>
-    <li>
-      <a href="./projects/javascript/hashmap/index.html">hashmap</a>
-    </li>
-    <li>
-      <a href="./projects/javascript/binary-search-tree/index.html"
-        >binary-search-tree</a
-      >
-    </li>
-    <li>
-      <a href="./projects/javascript/knights-travails/index.html"
-        >knights-travails</a
-      >
-    </li>
-    <li>
-      <a href="./projects/javascript/testing-practice/index.html"
-        >testing-practice</a
-      >
-    </li>
-    <li>
-      <a href="./projects/javascript/battleship/index.html">battleship</a>
-    </li>
-  </ul>
+    <h2>Advanced HTML & CSS</h2>
+    <ul>
+        <li>
+            <a href="./projects/advanced-html-css/button-hover/index.html"
+                >button-hover</a
+            >
+        </li>
+        <li>
+            <a href="./projects/advanced-html-css/popup/index.html">popup</a>
+        </li>
+        <li>
+            <a href="./projects/advanced-html-css/dropdown/index.html"
+                >dropdown</a
+            >
+        </li>
+        <li>
+            <a href="./projects/advanced-html-css/homepage/index.html"
+                >homepage</a
+            >
+        </li>
+    </ul>
+    <h2>React</h2>
+    <ul>
+        <li>
+            <a href="./practice/react/react-practice.html">react-practice</a>
+        </li>
+        <li>
+            <a href="https://cv-application-1st.pages.dev/">cv-app</a>
+        </li>
+        <li>
+            <a href="https://memory-card-5lx.pages.dev/">memory-card</a>
+        </li>
+        <li>
+            <a href="https://shopping-cart-7mz.pages.dev/">shopping-cart</a>
+        </li>
+    </ul>
 
-  <h2>Advanced HTML & CSS</h2>
-  <ul>
-    <li>
-      <a href="./projects/advanced-html-css/button-hover/index.html"
-        >button-hover</a
-      >
-    </li>
-    <li>
-      <a href="./projects/advanced-html-css/popup/index.html">popup</a>
-    </li>
-    <li>
-      <a href="./projects/advanced-html-css/dropdown/index.html">dropdown</a>
-    </li>
-    <li>
-      <a href="./projects/advanced-html-css/homepage/index.html">homepage</a>
-    </li>
-  </ul>
-  <h2>React</h2>
-  <ul>
-    <li>
-      <a href="./practice/react/react-practice.html">react-practice</a>
-    </li>
-    <li>
-      <a href="https://cv-application-1st.pages.dev/">cv-app</a>
-    </li>
-    <li>
-      <a href="https://memory-card-5lx.pages.dev/">memory-card</a>
-    </li>
-    <li>
-      <a href="https://shopping-cart-7mz.pages.dev/">shopping-cart</a>
-    </li>
-  </ul>
-
-  <h2>Node.js</h2>
-  <ul>
-    <li>
-      <a href="./practice/node-practice/index.html">node-practice</a>
-    </li>
-    <li>
-      <a href="https://github.com/sp41414/basic-informational-site"
-        >basic-informational-site</a
-      >
-    </li>
-    <li>
-      <a href="https://mini-message-board-hue4.onrender.com/">
-        mini-message-board</a>
-    </li>
-    <li>
-      <a href="https://inventory-app-k5qx.onrender.com/">inventory-app</a>
-    </li>
-    <li>
-        <a href="https://members-only-ztsx.onrender.com/">members-only</a>
-    </li>
-  </ul>
+    <h2>Node.js</h2>
+    <ul>
+        <li>
+            <a href="./practice/node-practice/index.html">node-practice</a>
+        </li>
+        <li>
+            <a href="https://github.com/sp41414/basic-informational-site"
+                >basic-informational-site</a
+            >
+        </li>
+        <li>
+            <a href="https://mini-message-board-hue4.onrender.com/">
+                mini-message-board</a
+            >
+        </li>
+        <li>
+            <a href="https://inventory-app-k5qx.onrender.com/">inventory-app</a>
+        </li>
+        <li>
+            <a href="https://members-only-ztsx.onrender.com/">members-only</a>
+        </li>
+        <li>
+            <a href="https://fileup-arit.onrender.com/">file-uploader</a>
+        </li>
+    </ul>
 </html>
